Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -1,5 +1,6 @@
 {
   "dhp157:0.1": "Collection of Minor Texts",
   "dhp157:0.2": "Verses of Dhamma",
-  "dhp157:0.3": "Chapter on Self"
+  "dhp157:0.3": "Chapter on Self",
+  "dhp157:1": "If one likes onself,"
 }
