Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -3,5 +3,6 @@
   "dhp157:0.2": "Verses of Dhamma",
   "dhp157:0.3": "Chapter on Self",
   "dhp157:1": "If one likes onself,",
-  "dhp157:2": "then one should guard oneself well;"
+  "dhp157:2": "then one should guard oneself well;",
+  "dhp157:3": "during any of the three phases of the night,"
 }
