--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -4,5 +4,6 @@
   "dhp157:0.3": "Chapter on Self",
   "dhp157:1": "If one likes onself,",
   "dhp157:2": "then one should guard oneself well;",
-  "dhp157:3": "during any of the three phases of the night,"
+  "dhp157:3": "during any of the three phases of the night,",
+  "dhp157:4": "a wise person remains alert."
 }
