Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -6,5 +6,6 @@
   "dhp157:2": "then one should guard oneself well;",
   "dhp157:3": "during any of the three phases of the night,",
   "dhp157:4": "a wise person should remain alert.",
-  "dhp158:1": "First one should settles oneself"
+  "dhp158:1": "First one should settles oneself",
+  "dhp158:2": "in what is proper;"
 }
