--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -10,5 +10,6 @@
   "dhp158:2": "in what is proper,",
   "dhp158:3": "then one may instruct others;",
   "dhp158:4": "a wise person should not become defiled.",
-  "dhp159:1": "One should act the same way"
+  "dhp159:1": "One should act the same way",
+  "dhp159:2": "that one instructs others to act;"
 }
