--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -12,5 +12,6 @@
   "dhp158:4": "a wise person should not become defiled.",
   "dhp159:1": "One should act the same way",
   "dhp159:2": "that one instructs others to act;",
-  "dhp159:3": "one who is well-trained can train others -"
+  "dhp159:3": "one who is well-trained can train others -",
+  "dhp159:4": "for it is truly hard to train oneself."
 }
