--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -3,7 +3,7 @@
   "dhp157:0.2": "Verses of Dhamma",
   "dhp157:0.3": "Chapter on Self",
   "dhp157:1": "If one values oneself,",
-  "dhp157:2": "then they should guard themselves well;",
+  "dhp157:2": "then one should guard oneself well;",
   "dhp157:3": "during any of the three phases of the night,",
   "dhp157:4": "a wise person should remain alert.",
   "dhp158:1": "First one should settles oneself",
