Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -13,5 +13,6 @@
   "dhp159:1": "One should act the same way",
   "dhp159:2": "that one instructs others to act;",
   "dhp159:3": "one who is well-trained can train others -",
-  "dhp159:4": "for it is truly hard to train oneself."
+  "dhp159:4": "for it is truly hard to train oneself.",
+  "dhp160:1": "One is one's own protector -"
 }
