Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -16,5 +16,6 @@
   "dhp159:4": "for it is truly hard to train oneself.",
   "dhp160:1": "One is one's own protector -",
   "dhp160:2": "how could another protect you?",
-  "dhp160:3": "One who has trained themselves well"
+  "dhp160:3": "One who has trained themselves well",
+  "dhp160:4": "has gained a protector that is truly hard to acquire."
 }
