--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -17,5 +17,5 @@
   "dhp160:1": "One is one's own protector -",
   "dhp160:2": "how could another protect you?",
   "dhp160:3": "One who has trained themselves well",
-  "dhp160:4": "has gained a protector that is truly hard to acquire."
+  "dhp160:4": "has acquired a protector that is truly hard to acquire."
 }
