Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -17,5 +17,6 @@
   "dhp160:1": "One is one's own protector -",
   "dhp160:2": "how could another protect you?",
   "dhp160:3": "One who has trained oneself well",
-  "dhp160:4": "has acquired a protector that is truly hard to acquire."
+  "dhp160:4": "has acquired a protector that is truly hard to acquire.",
+  "dhp161:1": "Evil is done by oneself,"
 }
