--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -19,5 +19,6 @@
   "dhp160:3": "One who has trained oneself well",
   "dhp160:4": "has acquired a protector that is truly hard to acquire.",
   "dhp161:1": "Evil is done by oneself,",
-  "dhp161:2": "born from oneself, produced by oneself;"
+  "dhp161:2": "born from oneself, produced by oneself;",
+  "dhp161:3": "in this way a fool self-destructs,"
 }
