--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -21,5 +21,5 @@
   "dhp161:1": "Evil is done by oneself,",
   "dhp161:2": "born from oneself, produced by oneself;",
   "dhp161:3": "in this way a fool self-destructs,",
-  "dhp161:4": "like a diamond cutting stone."
+  "dhp161:4": "like a diamond cutting through stone."
 }
