Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -24,5 +24,6 @@
   "dhp161:4": "like a diamond cutting through stone.",
   "dhp162:1": "One who is excessively immoral,",
   "dhp162:2": "like a tree overgrown by vines,",
-  "dhp162:3": "does to oneself"
+  "dhp162:3": "does to oneself",
+  "dhp162:4": "what one would wish for an enemy."
 }
