Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -25,5 +25,5 @@
   "dhp162:1": "One who is excessively immoral,",
   "dhp162:2": "like a tree overgrown by vines,",
   "dhp162:3": "does to oneself",
-  "dhp162:4": "what one would wish for an enemy."
+  "dhp162:4": "what one's enemy wants."
 }
