--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -26,5 +26,6 @@
   "dhp162:2": "like a tree overgrown by vines,",
   "dhp162:3": "does to oneself",
   "dhp162:4": "what an enemy wants.",
-  "dhp163:1": "It is easy to do things for oneself"
+  "dhp163:1": "It is easy to do things for oneself",
+  "dhp163:2": "that are worthless and unbeneficial,"
 }
