Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -27,5 +27,6 @@
   "dhp162:3": "does to oneself",
   "dhp162:4": "what an enemy wants.",
   "dhp163:1": "It is easy to do things for oneself",
-  "dhp163:2": "that are worthless and unbeneficial,"
+  "dhp163:2": "that are worthless and unbeneficial,",
+  "dhp163:3": "but to do what is beneficial and worthwhile"
 }
