--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -26,7 +26,7 @@
   "dhp162:2": "like a tree overgrown by vines,",
   "dhp162:3": "does to oneself",
   "dhp162:4": "what an enemy wants.",
-  "dhp163:1": "It is easy to do things for oneself",
+  "dhp163:1": "It is easy to do things that are worthless",
   "dhp163:2": "that are worthless and unbeneficial,",
   "dhp163:3": "but to do what is beneficial and worthwhile",
   "dhp163:4": "is extremely difficult."
