Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -29,5 +29,6 @@
   "dhp163:1": "It is easy to do things that are worthless",
   "dhp163:2": "and of no benefit to oneself;",
   "dhp163:3": "but to do what is beneficial and worthwhile",
-  "dhp163:4": "is extremely difficult."
+  "dhp163:4": "is extremely difficult.",
+  "dhp164:1": "A foolish person who,"
 }
