--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -31,5 +31,6 @@
   "dhp163:3": "but to do what is beneficial and worthwhile",
   "dhp163:4": "is extremely difficult.",
   "dhp164:1": "A foolish person who,",
-  "dhp164:2": "based on a harmful perspective,"
+  "dhp164:2": "based on a harmful perspective,",
+  "dhp164:3": "reviles the teachings of the Worthy One,"
 }
