Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -33,6 +33,7 @@
   "dhp164:1": "A foolish person who,",
   "dhp164:2": "based on a harmful perspective,",
   "dhp164:3": "reviles the teachings",
+  "dhp164:4": "of the Worthy One,",
   "dhp164:5": "brings about their own destruction",
   "dhp164:6": "like a monocarpic plant."
 }
