--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -36,5 +36,6 @@
   "dhp164:4": "of the Worthy One,",
   "dhp164:5": "brings about their own destruction",
   "dhp164:6": "like a monocarpic plant.",
-  "dhp165:1": "Evil is done by oneself,"
+  "dhp165:1": "Evil is done by oneself,",
+  "dhp165:2": "defilement is caused by oneself,"
 }
