--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -37,5 +37,6 @@
   "dhp164:5": "brings about their own destruction",
   "dhp164:6": "like a monocarpic plant.",
   "dhp165:1": "Evil is done by oneself,",
-  "dhp165:2": "defilement is caused by oneself;"
+  "dhp165:2": "defilement is caused by oneself;",
+  "dhp165:3": "Or one does not do evil by oneself,"
 }
