--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.57:0.1": "Verbundene Lehrreden 22.57 ",
-  "sn22.57:0.2": "6. Das Kapitel über Einbindung "
+  "sn22.57:0.2": "6. Das Kapitel über Einbindung ",
+  "sn22.57:0.3": "Sieben Fälle "
 }
