--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.57:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.57:0.3": "Sieben Fälle ",
   "sn22.57:1.1": "In Sāvatthī. ",
-  "sn22.57:1.2": "„Mönche und Nonnen, in dieser Lehre und Schulung wird ein Mönch, der in sieben Fällen bewandert ist und auf drei Arten untersucht, vollkommen genannt, vervollkommnet, der höchste Mensch. "
+  "sn22.57:1.2": "„Mönche und Nonnen, in dieser Lehre und Schulung wird ein Mönch, der in sieben Fällen bewandert ist und auf drei Arten untersucht, vollkommen genannt, vervollkommnet, der höchste Mensch. ",
+  "sn22.57:1.3": "Und wie ist ein Mönch in sieben Fällen bewandert? "
 }
