--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.57:0.3": "Sieben Fälle ",
   "sn22.57:1.1": "In Sāvatthī. ",
   "sn22.57:1.2": "„Mönche und Nonnen, in dieser Lehre und Schulung wird ein Mönch, der in sieben Fällen bewandert ist und auf drei Arten untersucht, vollkommen genannt, vervollkommnet, der höchste Mensch. ",
-  "sn22.57:1.3": "Und wie ist ein Mönch in sieben Fällen bewandert? "
+  "sn22.57:1.3": "Und wie ist ein Mönch in sieben Fällen bewandert? ",
+  "sn22.57:1.4": "Da versteht ein Mönch Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. "
 }
