--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.57:1.2": "„Mönche und Nonnen, in dieser Lehre und Schulung wird ein Mönch, der in sieben Fällen bewandert ist und auf drei Arten untersucht, vollkommen genannt, vervollkommnet, der höchste Mensch. ",
   "sn22.57:1.3": "Und wie ist ein Mönch in sieben Fällen bewandert? ",
   "sn22.57:1.4": "Da versteht ein Mönch Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. ",
-  "sn22.57:1.5": "Er versteht die vorteilhaften und nachteiligen Folgen der Form und das Entrinnen von ihr. "
+  "sn22.57:1.5": "Er versteht die vorteilhaften und nachteiligen Folgen der Form und das Entrinnen von ihr. ",
+  "sn22.57:1.6": "Er versteht Gefühl … "
 }
