Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.57:1.5": "Er versteht die vorteilhaften und nachteiligen Folgen der Form und das Entrinnen von ihr. ",
   "sn22.57:1.6": "Er versteht Gefühl … ",
   "sn22.57:1.7": "Wahrnehmung … ",
-  "sn22.57:1.8": "Entscheidungen … "
+  "sn22.57:1.8": "Entscheidungen … ",
+  "sn22.57:1.9": "Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. "
 }
