--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.57:1.7": "Wahrnehmung … ",
   "sn22.57:1.8": "Entscheidungen … ",
   "sn22.57:1.9": "Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. ",
-  "sn22.57:1.10": "Er versteht die vorteilhaften und nachteiligen Folgen des Bewusstseins und das Entrinnen davon. "
+  "sn22.57:1.10": "Er versteht die vorteilhaften und nachteiligen Folgen des Bewusstseins und das Entrinnen davon. ",
+  "sn22.57:2.1": "Und was ist Form? "
 }
