--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.57:1.9": "Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. ",
   "sn22.57:1.10": "Er versteht die vorteilhaften und nachteiligen Folgen des Bewusstseins und das Entrinnen davon. ",
   "sn22.57:2.1": "Und was ist Form? ",
-  "sn22.57:2.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist, "
+  "sn22.57:2.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist, ",
+  "sn22.57:2.3": "das nennt man Form. "
 }
