Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.57:1.10": "Er versteht die vorteilhaften und nachteiligen Folgen des Bewusstseins und das Entrinnen davon. ",
   "sn22.57:2.1": "Und was ist Form? ",
   "sn22.57:2.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist, ",
-  "sn22.57:2.3": "das nennt man Form. "
+  "sn22.57:2.3": "das nennt man Form. ",
+  "sn22.57:2.4": "Form entsteht aus Nahrung. "
 }
