--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.57:2.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist, ",
   "sn22.57:2.3": "das nennt man Form. ",
   "sn22.57:2.4": "Form entsteht aus Nahrung. ",
-  "sn22.57:2.5": "Wenn die Nahrung aufhört, hört Form auf. "
+  "sn22.57:2.5": "Wenn die Nahrung aufhört, hört Form auf. ",
+  "sn22.57:2.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich "
 }
