Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.57:2.3": "das nennt man Form. ",
   "sn22.57:2.4": "Form entsteht aus Nahrung. ",
   "sn22.57:2.5": "Wenn die Nahrung aufhört, hört Form auf. ",
-  "sn22.57:2.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich "
+  "sn22.57:2.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich ",
+  "sn22.57:2.7": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. "
 }
