--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.57:2.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich ",
   "sn22.57:2.7": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
   "sn22.57:3.1": "In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen die vorteilhaften Folgen. ",
-  "sn22.57:3.3": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. "
+  "sn22.57:3.3": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
+  "sn22.57:3.5": "Die Sehnsucht und Begierde nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. "
 }
