--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.57:3.5": "Die Sehnsucht und Begierde nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn22.57:4.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
   "sn22.57:4.2": "die ihre vorteilhaften und nachteiligen Folgen und das Entrinnen davon unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Form üben: Sie üben gut. ",
-  "sn22.57:4.3": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. "
+  "sn22.57:4.3": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. ",
+  "sn22.57:5.1": "Diese Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, "
 }
