Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.57:5.1": "Diese Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
   "sn22.57:5.2": "die ihre vorteilhaften  und nachteiligen Folgen  und das Entrinnen davon unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
   "sn22.57:5.3": "Die, die gut befreit sind, sind Vollkommene. ",
-  "sn22.57:5.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. "
+  "sn22.57:5.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
+  "sn22.57:6.1": "Und was ist Gefühl? "
 }
