--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -31,5 +31,5 @@
   "sn22.57:5.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
   "sn22.57:6.1": "Und was ist Gefühl? ",
   "sn22.57:6.2": "Es gibt sechs Klassen von Gefühl: ",
-  "sn22.57:6.3": "aus Augenberührung entsprungenes Gefühl … "
+  "sn22.57:6.3": "Gefühl entsprungen aus Berührung mit dem Auge … "
 }
