--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.57:6.2": "Es gibt sechs Klassen von Gefühl: ",
   "sn22.57:6.3": "Gefühl entsprungen aus Berührung mit dem Auge … ",
   "sn22.57:6.4": "und mit dem Geist. ",
-  "sn22.57:6.5": "Das nennt man Gefühl. "
+  "sn22.57:6.5": "Das nennt man Gefühl. ",
+  "sn22.57:6.6": "Gefühl entsteht aus Berührung. "
 }
