--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn22.57:6.5": "Das nennt man Gefühl. ",
   "sn22.57:6.6": "Gefühl entsteht aus Berührung. ",
   "sn22.57:6.7": "Wenn Berührung aufhört, hört Gefühl auf. ",
-  "sn22.57:6.8": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … "
+  "sn22.57:6.8": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … ",
+  "sn22.57:7.1": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen: Darin bestehen die vorteilhaften Folgen. "
 }
