--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.26_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "sn22.26:1.16": "Entscheidungen … ",
   "sn22.26:1.19": "und Bewusstsein entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.26:1.20": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn22.26:1.21": "Die Sehnsucht und Begierde nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. ",
+  "sn22.26:1.21": "Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn22.26:2.1": "Solange ich bei diesen fünf Aggregaten die vorteilhaften und nachteiligen Folgen und das Entrinnen nicht auf diese Art ihrer wahren Natur gemäß wahrhaftig verstanden hatte, so lange habe ich in dieser Welt mit ihren Göttern, Māras und Brahmās, unter dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen nicht mein unübertreffliches vollkommenes Erwachen erklärt. ",
   "sn22.26:2.2": "Als ich aber bei diesen fünf Aggregaten die vorteilhaften und nachteiligen Folgen und das Entrinnen auf diese Art ihrer wahren Natur gemäß wahrhaftig verstanden hatte, da habe ich in dieser Welt mit ihren Göttern, Māras und Brahmās, unter dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen mein unübertreffliches vollkommenes Erwachen erklärt. ",
   "sn22.26:2.4": "Erkennen und Sehen gingen mir auf: ",
