--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.57:6.8": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … ",
   "sn22.57:7.1": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.57:7.3": "Dass Gefühl unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn22.57:7.5": "Sehnen und Begehren nach Gefühl ausräumen und aufgeben: Darin besteht das Entrinnen. … "
+  "sn22.57:7.5": "Sehnen und Begehren nach Gefühl ausräumen und aufgeben: Darin besteht das Entrinnen. … ",
+  "sn22.57:10.1": "Und was ist Wahrnehmung? "
 }
