--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.57:7.5": "Sehnen und Begehren nach Gefühl ausräumen und aufgeben: Darin besteht das Entrinnen. … ",
   "sn22.57:10.1": "Und was ist Wahrnehmung? ",
   "sn22.57:10.2": "Es gibt sechs Klassen von Wahrnehmung: ",
-  "sn22.57:10.3": "Wahrnehmung von Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken. "
+  "sn22.57:10.3": "Wahrnehmung von Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken. ",
+  "sn22.57:10.4": "Das nennt man Wahrnehmung. "
 }
