--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.57:10.2": "Es gibt sechs Klassen von Wahrnehmung: ",
   "sn22.57:10.3": "Wahrnehmung von Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken. ",
   "sn22.57:10.4": "Das nennt man Wahrnehmung. ",
-  "sn22.57:10.5": "Wahrnehmung entsteht aus Berührung. "
+  "sn22.57:10.5": "Wahrnehmung entsteht aus Berührung. ",
+  "sn22.57:10.6": "Wenn Berührung aufhört, hört Wahrnehmung auf. "
 }
