--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.57:10.4": "Das nennt man Wahrnehmung. ",
   "sn22.57:10.5": "Wahrnehmung entsteht aus Berührung. ",
   "sn22.57:10.6": "Wenn Berührung aufhört, hört Wahrnehmung auf. ",
-  "sn22.57:10.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … "
+  "sn22.57:10.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … ",
+  "sn22.57:11.1": "Und was sind Entscheidungen? "
 }
