--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.57:10.5": "Wahrnehmung entsteht aus Berührung. ",
   "sn22.57:10.6": "Wenn Berührung aufhört, hört Wahrnehmung auf. ",
   "sn22.57:10.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … ",
-  "sn22.57:11.1": "Und was sind Entscheidungen? "
+  "sn22.57:11.1": "Und was sind Entscheidungen? ",
+  "sn22.57:11.2": "Es gibt sechs Klassen von Entscheidungen: "
 }
