--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn22.57:10.6": "Wenn Berührung aufhört, hört Wahrnehmung auf. ",
   "sn22.57:10.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … ",
   "sn22.57:11.1": "Und was sind Entscheidungen? ",
-  "sn22.57:11.2": "Es gibt sechs Klassen von Entscheidungen: "
+  "sn22.57:11.2": "Es gibt sechs Klassen von Entscheidungen: ",
+  "sn22.57:11.3": "Absicht in Bezug auf Bilder … "
 }
