Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.57:11.1": "Und was sind Entscheidungen? ",
   "sn22.57:11.2": "Es gibt sechs Klassen von Entscheidungen: ",
   "sn22.57:11.3": "Absicht in Bezug auf Bilder … ",
-  "sn22.57:11.4": "Absicht in Bezug auf Gedanken. "
+  "sn22.57:11.4": "Absicht in Bezug auf Gedanken. ",
+  "sn22.57:11.5": "Das nennt man Entscheidungen. "
 }
