Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "sn22.57:11.3": "Absicht in Bezug auf Bilder … ",
   "sn22.57:11.4": "Absicht in Bezug auf Gedanken. ",
   "sn22.57:11.5": "Das nennt man Entscheidungen. ",
-  "sn22.57:11.6": "Entscheidungen entstehen aus Berührung. "
+  "sn22.57:11.6": "Entscheidungen entstehen aus Berührung. ",
+  "sn22.57:11.7": "Wenn Berührung aufhört, hören Entscheidungen auf. "
 }
