--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn22.57:11.4": "Absicht in Bezug auf Gedanken. ",
   "sn22.57:11.5": "Das nennt man Entscheidungen. ",
   "sn22.57:11.6": "Entscheidungen entstehen aus Berührung. ",
-  "sn22.57:11.7": "Wenn Berührung aufhört, hören Entscheidungen auf. "
+  "sn22.57:11.7": "Wenn Berührung aufhört, hören Entscheidungen auf. ",
+  "sn22.57:11.8": "Die Übung, die zum Aufhören von Entscheidungen führt, ist einfach dieser edle achtfache Pfad … "
 }
