Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "sn22.57:17.2": "die seine vorteilhaften  und nachteiligen Folgen  und das Entrinnen davon unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
   "sn22.57:17.3": "Die, die gut befreit sind, sind Vollkommene. ",
   "sn22.57:17.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
-  "sn22.57:17.5": "So ist ein Mönch in sieben Fällen bewandert. "
+  "sn22.57:17.5": "So ist ein Mönch in sieben Fällen bewandert. ",
+  "sn22.57:18.1": "Und wie untersucht ein Mönch auf drei Arten? "
 }
