Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "sn22.57:17.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
   "sn22.57:17.5": "So ist ein Mönch in sieben Fällen bewandert. ",
   "sn22.57:18.1": "Und wie untersucht ein Mönch auf drei Arten? ",
-  "sn22.57:18.2": "Dann untersucht ein Mönch die Elemente, die Sinnesfelder und das abhängige Entstehen. "
+  "sn22.57:18.2": "Dann untersucht ein Mönch die Elemente, die Sinnesfelder und das abhängige Entstehen. ",
+  "sn22.57:18.3": "So untersucht ein Mönch auf drei Arten. "
 }
