Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -39,5 +39,6 @@
   "dhp165:1": "By oneself evil is done,",
   "dhp165:2": "by oneself one becomes defiled;",
   "dhp165:3": "by oneself evil is not done,",
-  "dhp165:4": "by oneself one becomes purified;"
+  "dhp165:4": "by oneself one becomes purified;",
+  "dhp165:5": "purity and impurity depend on oneself -"
 }
