Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -41,5 +41,6 @@
   "dhp165:3": "by oneself evil is not done,",
   "dhp165:4": "by oneself one becomes purified;",
   "dhp165:5": "purity and impurity depend on oneself -",
-  "dhp165:6": "no one can purify another."
+  "dhp165:6": "no one can purify another.",
+  "dhp166:1": "One should not abandon one's own welfare"
 }
