Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -42,5 +42,6 @@
   "dhp165:4": "by oneself one becomes purified;",
   "dhp165:5": "purity and impurity depend on oneself -",
   "dhp165:6": "no one can purify another.",
-  "dhp166:1": "One should not abandon one's own welfare"
+  "dhp166:1": "One should not abandon one's own welfare",
+  "dhp166:2": "for the sake of others, no matter how many;"
 }
