Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -44,5 +44,6 @@
   "dhp165:6": "no one can purify another.",
   "dhp166:1": "One should not abandon one's own welfare",
   "dhp166:2": "for the sake of others, no matter how many;",
-  "dhp166:3": "having understood one's own welfare,"
+  "dhp166:3": "having understood one's own welfare,",
+  "dhp166:4": "one should be intent upon it."
 }
