Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -1,4 +1,5 @@
 {
   "dhp167:0.1": "Collection of Minor Texts",
-  "dhp167:0.2": "Verses of Dhamma"
+  "dhp167:0.2": "Verses of Dhamma",
+  "dhp167:0.3": "Chapter of the World"
 }
