Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -2,5 +2,6 @@
   "dhp167:0.1": "Collection of Minor Texts",
   "dhp167:0.2": "Verses of Dhamma",
   "dhp167:0.3": "Chapter of the World",
-  "dhp167:1": "One should not participate in inferior teachings,"
+  "dhp167:1": "One should not participate in inferior teachings,",
+  "dhp167:2": "one should not live negligently;"
 }
