Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -665,6 +665,7 @@
   "sn-name:664.sn22.55": "Ein inniger Spruch ",
   "sn-name:665.sn22.56": "Blickwinkel ",
   "sn-name:666.sn22.57": "Sieben Fälle ",
+  "sn-name:667.sn22.58": "Der vollkommen erwachte Buddha ",
   "sn-name:668.sn22.59": "Kennzeichen des Nicht-selbst ",
   "sn-name:671.sn22.62": "Der Geltungsbereich der Sprache ",
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
