Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.60:0.1": "Verbundene Lehrreden 22.60 ",
   "sn22.60:0.2": "6. Das Kapitel über Einbindung ",
-  "sn22.60:0.3": "Mit Mahāli "
+  "sn22.60:0.3": "Mit Mahāli ",
+  "sn22.60:1.1": "So habe ich es gehört: "
 }
