Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "dn34:1.3.17": "Welche zwei Dinge führen zu Erhabenheit? ",
   "dn34:1.3.18": "Man ist leicht zu ermahnen und man hat gute Freunde. ",
   "dn34:1.3.20": "Welche zwei Dinge sind schwer zu erfassen? ",
-  "dn34:1.3.21": "Welches die Gründe und Anlässe für die Verunreinigung der Lebewesen sind und welches die Gründe und Anlässe für die Läuterung der Lebewesen sind. ",
+  "dn34:1.3.21": "Was die Ursache und Bedingung für die Verunreinigung der Lebewesen ist und was die Ursache und Bedingung für die Läuterung der Lebewesen ist. ",
   "dn34:1.3.23": "Welche zwei Dinge müssen erzeugt werden? ",
   "dn34:1.3.24": "Zwei Erkenntnisse: ",
   "dn34:1.3.25": "Erkennen der Auflösung und Erkennen des Nicht-Entstehens. ",
