Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.60:2.1": "„Herr, Pūraṇa Kassapa sagt: ",
   "sn22.60:2.2": "‚Es gibt keine Ursache und keine Bedingung für die Verunreinigung der Lebewesen. ",
   "sn22.60:2.3": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. ",
-  "sn22.60:2.4": "Es gibt keine Ursache und keine Bedingung für die Läuterung der Lebewesen. "
+  "sn22.60:2.4": "Es gibt keine Ursache und keine Bedingung für die Läuterung der Lebewesen. ",
+  "sn22.60:2.5": "Lebewesen werden ohne Ursache oder Bedingung geläutert.‘ "
 }
