Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -16,5 +16,5 @@
   "sn22.60:3.3": "Es gibt eine Ursache und eine Bedingung für die Läuterung der Lebewesen. ",
   "sn22.60:3.4": "Lebewesen werden aufgrund einer Ursache und Bedingung geläutert.“ ",
   "sn22.60:4.1": "„Aber Herr, was ist die Ursache und Bedingung für die Verunreinigung der Lebewesen? ",
-  "sn22.60:4.2": "Wie werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt? "
+  "sn22.60:4.2": "Wie werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt?“ "
 }
