Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.60:3.4": "Lebewesen werden aufgrund einer Ursache und Bedingung geläutert.“ ",
   "sn22.60:4.1": "„Aber Herr, was ist die Ursache und Bedingung für die Verunreinigung der Lebewesen? ",
   "sn22.60:4.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung verunreinigt?“ ",
-  "sn22.60:5.1": "„Mahāli, wenn Form ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen sie nicht lieben. "
+  "sn22.60:5.1": "„Mahāli, wenn Form ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen sie nicht lieben. ",
+  "sn22.60:5.2": "Aber da Form angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen sie. "
 }
