Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.60:5.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt. ",
   "sn22.60:6.1": "Wenn Gefühl ausschließlich schmerzhaft wäre … ",
   "sn22.60:7.1": "Wenn Wahrnehmung ausschließlich schmerzhaft wäre … ",
-  "sn22.60:7.2": "Wenn Entscheidungen ausschließlich schmerzhaft wären … "
+  "sn22.60:7.2": "Wenn Entscheidungen ausschließlich schmerzhaft wären … ",
+  "sn22.60:8.1": "Wenn Bewusstsein ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen es nicht lieben. "
 }
