Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.60:7.2": "Wenn Entscheidungen ausschließlich schmerzhaft wären … ",
   "sn22.60:8.1": "Wenn Bewusstsein ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen es nicht lieben. ",
   "sn22.60:8.2": "Aber da Bewusstsein angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen es. ",
-  "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. "
+  "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. ",
+  "sn22.60:8.4": "Das ist eine Ursache und Bedingung für die Verunreinigung der Lebewesen. "
 }
