Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:8.4": "Das ist eine Ursache und Bedingung für die Verunreinigung der Lebewesen. ",
   "sn22.60:8.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt.“ ",
-  "sn22.60:9.1": "„Aber Herr, was ist die Ursache und Bedingung für die Läuterung der Lebewesen? "
+  "sn22.60:9.1": "„Aber Herr, was ist die Ursache und Bedingung für die Läuterung der Lebewesen? ",
+  "sn22.60:9.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung geläutert?“ "
 }
